# CPP

./: README.md
TDpokemon/: CMakeLists.txt  Card.cpp  Card.h  EnergyCard.cpp  EnergyCard.h  Player.cpp  Player.h  PokemonCard.cpp  PokemonCard.h  TrainerCard.cpp  TrainerCard.h  main.cpp
TDtimeseries/: CMakeLists.txt  DistanceMetrics.cpp  DistanceMetrics.h  GaussianGenerator.cpp  GaussianGenerator.h  KNN.cpp  KNN.h  SinWaveGenerator.cpp  SinWaveGenerator.h  StepGenerator.cpp  StepGenerator.h  TimeSeriesDataset.cpp  TimeSeriesDataset.h  TimeSeriesGenerator.cpp  TimeSeriesGenerator.h  main.cpp
